--- a/jerry-core/CMakeLists.txt
+++ b/jerry-core/CMakeLists.txt
@@ -714,7 +714,7 @@ if(JERRY_MATH)
   set(JERRY_CORE_PKGCONFIG_REQUIRES libjerry-math)
 else()
   if(USING_GCC OR USING_CLANG)
-    set(CMAKE_REQUIRED_FLAGS "-Wno-error=strict-prototypes")
+    set(CMAKE_REQUIRED_FLAGS "-Wno-error -Wno-error=strict-prototypes")
   endif()
   check_library_exists(m sin "" HAVE_M_LIB)
   if(HAVE_M_LIB)
