Fix HAVE_M_LIB check for older CMake
With older CMake (for example 2.8.12.2) the feature check of HAVE_M_LIB
reports false positive fail due to -Werror=strict-prototypes. It is already
fixed in CMake https://gitlab.kitware.com/cmake/cmake/-/commit/4bc17345

The feature is present and works, so we should only ignore this build warning.

Additionally the necessary GCC/Clang guard added to the similar
CMake feature check in jerry-port/default/CMakeLists.txt

JerryScript-DCO-1.0-Signed-off-by: Csaba Osztrogonác csaba.osztrogonac@h-lab.eu

--- a/jerry-core/CMakeLists.txt
+++ b/jerry-core/CMakeLists.txt
@@ -416,6 +416,9 @@ if(JERRY_MATH)
   target_link_libraries(${JERRY_CORE_NAME} jerry-math)
   set(JERRY_CORE_PKGCONFIG_REQUIRES libjerry-math)
 else()
+  if(USING_GCC OR USING_CLANG)
+    set(CMAKE_REQUIRED_FLAGS "-Wno-error=strict-prototypes")
+  endif()
   check_library_exists(m sin "" HAVE_M_LIB)
   if(HAVE_M_LIB)
     target_link_libraries(${JERRY_CORE_NAME} m)
