--- a/jerry-port/default/CMakeLists.txt
+++ b/jerry-port/default/CMakeLists.txt
@@ -27,6 +27,7 @@ set(SOURCE_PORT_DEFAULT
   default-fatal.c
   default-io.c
   default-module.c
+  default-promise.c
 )
 
 # Amalgamated JerryScript source/header build.
