Add a callback which is called when Error objects are created
JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -129,6 +129,7 @@ LIT_MAGIC_STRING_ROUND = "round"
 LIT_MAGIC_STRING_SHIFT = "shift"
 LIT_MAGIC_STRING_SLICE = "slice"
 LIT_MAGIC_STRING_SPLIT = "split"
+LIT_MAGIC_STRING_STACK = "stack"
 LIT_MAGIC_STRING_THROW = "throw"
 LIT_MAGIC_STRING_TRUNC = "trunc"
 LIT_MAGIC_STRING_VALUE = "value"
