--- a/tests/unit-core/CMakeLists.txt
+++ b/tests/unit-core/CMakeLists.txt
@@ -69,6 +69,7 @@ set(SOURCE_UNIT_TEST_MAIN_MODULES
   test-proxy.c
   test-realm.c
   test-regexp-dotall-unicode.c
+  test-error-callback.c
   test-regexp.c
   test-regression-3588.c
   test-resource-name.c
