Disable `conversion` warning on win32/gnu-mingw
It's a mingw-runtime issue, but we disable conversion warning on win32/gnu-mingw
for getting jerryscript compile with mingw first.
The bug url are: https://sourceforge.net/p/mingw-w64/bugs/874/

JerryScript-DCO-1.0-Signed-off-by: Yonggang Luo luoyonggang@gmail.com

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,7 +211,10 @@ if(USING_GCC OR USING_CLANG)
   if(JERRY_MATH)
     jerry_add_compile_flags(-fno-builtin)
   endif()
-  jerry_add_compile_warnings(all extra format-nonliteral init-self conversion sign-conversion format-security missing-declarations shadow strict-prototypes undef old-style-definition)
+  jerry_add_compile_warnings(all extra format-nonliteral init-self sign-conversion format-security missing-declarations shadow strict-prototypes undef old-style-definition)
+  if(NOT "${PLATFORM}" STREQUAL "WINDOWS")
+    jerry_add_compile_warnings(conversion)
+  endif()
   jerry_add_compile_flags(-Wno-stack-protector -Wno-attributes -Werror)
 endif()
 
