--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -111,6 +111,7 @@ LIT_MAGIC_STRING_ATANH = "atanh"
 LIT_MAGIC_STRING_CATCH = "catch"
 LIT_MAGIC_STRING_CLEAR = "clear"
 LIT_MAGIC_STRING_CLZ32 = "clz32"
+LIT_MAGIC_STRING_DEREF = "deref"
 LIT_MAGIC_STRING_EVERY = "every"
 LIT_MAGIC_STRING_EXPM1 = "expm1"
 LIT_MAGIC_STRING_FALSE = "false"
@@ -215,6 +216,7 @@ LIT_MAGIC_STRING_UNICODE = "unicode"
 LIT_MAGIC_STRING_UNSHIFT = "unshift"
 LIT_MAGIC_STRING_VALUE_OF_UL = "valueOf"
 LIT_MAGIC_STRING_WEAKMAP_UL = "WeakMap"
+LIT_MAGIC_STRING_WEAKREF_UL = "WeakRef"
 LIT_MAGIC_STRING_WEAKSET_UL = "WeakSet"
 LIT_MAGIC_STRING_EPSILON_U = "EPSILON"
 LIT_MAGIC_STRING_DATAVIEW_UL = "DataView"
