Add non-standard behaviour support for Proxies
JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/tests/unit-core/CMakeLists.txt
+++ b/tests/unit-core/CMakeLists.txt
@@ -74,6 +74,7 @@ set(SOURCE_UNIT_TEST_MAIN_MODULES
   test-regression-3588.c
   test-resource-name.c
   test-snapshot.c
+  test-special-proxy.c
   test-string-to-number.c
   test-stringbuilder.c
   test-strings.c
