Fix deleting native pointers
JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/tests/unit-core/CMakeLists.txt
+++ b/tests/unit-core/CMakeLists.txt
@@ -59,6 +59,7 @@ set(SOURCE_UNIT_TEST_MAIN_MODULES
   test-mem-stats.c
   test-native-callback-nested.c
   test-native-instanceof.c
+  test-native-pointer.c
   test-newtarget.c
   test-number-converter.c
   test-number-to-int32.c
