--- a/tests/unit-core/CMakeLists.txt
+++ b/tests/unit-core/CMakeLists.txt
@@ -66,6 +66,7 @@ set(SOURCE_UNIT_TEST_MAIN_MODULES
   test-number-to-string.c
   test-objects-foreach.c
   test-poolman.c
+  test-promise-callback.c
   test-promise.c
   test-proxy.c
   test-realm.c
