Create special objects for scripts instead of functions
JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -136,9 +136,11 @@ LIT_MAGIC_STRING_VALUE = "value"
 LIT_MAGIC_STRING_RESOURCE_EVAL = "<eval>"
 LIT_MAGIC_STRING_BIGINT_UL = "BigInt"
 LIT_MAGIC_STRING_LOG10E_U = "LOG10E"
+LIT_MAGIC_STRING_MODULE_UL = "Module"
 LIT_MAGIC_STRING_NUMBER_UL = "Number"
 LIT_MAGIC_STRING_OBJECT_UL = "Object"
 LIT_MAGIC_STRING_REGEXP_UL = "RegExp"
+LIT_MAGIC_STRING_SCRIPT_UL = "Script"
 LIT_MAGIC_STRING_STRING_UL = "String"
 LIT_MAGIC_STRING_SYMBOL_UL = "Symbol"
 LIT_MAGIC_STRING_ASSIGN = "assign"
@@ -215,7 +217,6 @@ LIT_MAGIC_STRING_VALUE_OF_UL = "valueOf"
 LIT_MAGIC_STRING_WEAKMAP_UL = "WeakMap"
 LIT_MAGIC_STRING_WEAKSET_UL = "WeakSet"
 LIT_MAGIC_STRING_EPSILON_U = "EPSILON"
-LIT_MAGIC_STRING_RUNNABLE_UL = "Runnable"
 LIT_MAGIC_STRING_DATAVIEW_UL = "DataView"
 LIT_MAGIC_STRING_FUNCTION_UL = "Function"
 LIT_MAGIC_STRING_INFINITY_UL = "Infinity"
