Always run all checks regardless of the previous job result
JerryScript-DCO-1.0-Signed-off-by: Dániel Bátyai daniel.batyai@h-lab.eu

--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -15,12 +15,19 @@ jobs:
       - run: sudo apt update
       - run: sudo apt install doxygen vera++ cppcheck pylint python-serial
       - run: $RUNNER --check-signed-off=gh-actions
+        if: ${{ always() }}
       - run: $RUNNER --check-doxygen
+        if: ${{ always() }}
       - run: $RUNNER --check-vera
+        if: ${{ always() }}
       - run: $RUNNER --check-license
+        if: ${{ always() }}
       - run: $RUNNER --check-magic-strings
+        if: ${{ always() }}
       - run: $RUNNER --check-pylint
+        if: ${{ always() }}
       - run: $RUNNER --check-cppcheck
+        if: ${{ always() }}
 
   Linux_x86-64_Build_Correctness_Debugger_Tests:
     runs-on: ubuntu-latest
