--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -174,6 +174,7 @@ LIT_MAGIC_STRING_RETURN = "return"
 LIT_MAGIC_STRING_SEARCH = "search"
 LIT_MAGIC_STRING_SOURCE = "source"
 LIT_MAGIC_STRING_SPLICE = "splice"
+LIT_MAGIC_STRING_STATUS = "status"
 LIT_MAGIC_STRING_STRING = "string"
 LIT_MAGIC_STRING_STICKY = "sticky"
 LIT_MAGIC_STRING_SYMBOL = "symbol"
@@ -191,6 +192,7 @@ LIT_MAGIC_STRING_BOOLEAN = "boolean"
 LIT_MAGIC_STRING_COMPILE = "compile"
 LIT_MAGIC_STRING_DEFAULT = "default"
 LIT_MAGIC_STRING_DOTALL = "dotAll"
+LIT_MAGIC_STRING_REASON = "reason"
 LIT_MAGIC_STRING_FLATMAP = "flatMap"
 LIT_MAGIC_STRING_FOR_EACH_UL = "forEach"
 LIT_MAGIC_STRING_GET_DATE_UL = "getDate"
@@ -237,6 +239,7 @@ LIT_MAGIC_STRING_IS_FROZEN_UL = "isFrozen"
 LIT_MAGIC_STRING_IS_SEALED_UL = "isSealed"
 LIT_MAGIC_STRING_ITERATOR = "iterator"
 LIT_MAGIC_STRING_PARSE_INT = "parseInt"
+LIT_MAGIC_STRING_REJECTED = "rejected"
 LIT_MAGIC_STRING_SET_HOURS_UL = "setHours"
 LIT_MAGIC_STRING_SET_INT16_UL = "setInt16"
 LIT_MAGIC_STRING_SET_INT32_UL = "setInt32"
@@ -253,6 +256,7 @@ LIT_MAGIC_STRING_ARGUMENTS_UL = "Arguments"
 LIT_MAGIC_STRING_ANONYMOUS = "anonymous"
 LIT_MAGIC_STRING_CONSTRUCT = "construct"
 LIT_MAGIC_STRING_EVAL_ERROR_UL = "EvalError"
+LIT_MAGIC_STRING_ALLSETTLED = "allSettled"
 LIT_MAGIC_STRING_INT8_ARRAY_UL = "Int8Array"
 LIT_MAGIC_STRING_IS_INTEGER = "isInteger"
 LIT_MAGIC_STRING_MAX_VALUE_U = "MAX_VALUE"
@@ -264,6 +268,7 @@ LIT_MAGIC_STRING_ARGUMENTS = "arguments"
 LIT_MAGIC_STRING_DECODE_URI = "decodeURI"
 LIT_MAGIC_STRING_ENCODE_URI = "encodeURI"
 LIT_MAGIC_STRING_FIND_INDEX = "findIndex"
+LIT_MAGIC_STRING_FULFILLED = "fulfilled"
 LIT_MAGIC_STRING_GENERATOR_UL = "Generator"
 LIT_MAGIC_STRING_GET_UTC_DAY_UL = "getUTCDay"
 LIT_MAGIC_STRING_GET_UINT16_UL = "getUint16"
