--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -40,6 +40,7 @@ LIT_MAGIC_STRING_UTC_U = "UTC"
 LIT_MAGIC_STRING_ABS = "abs"
 LIT_MAGIC_STRING_ADD = "add"
 LIT_MAGIC_STRING_ALL = "all"
+LIT_MAGIC_STRING_ANY = "any"
 LIT_MAGIC_STRING_COS = "cos"
 LIT_MAGIC_STRING_EXP = "exp"
 LIT_MAGIC_STRING_FOR = "for"
@@ -136,6 +137,7 @@ LIT_MAGIC_STRING_TRUNC = "trunc"
 LIT_MAGIC_STRING_VALUE = "value"
 LIT_MAGIC_STRING_RESOURCE_EVAL = "<eval>"
 LIT_MAGIC_STRING_BIGINT_UL = "BigInt"
+LIT_MAGIC_STRING_ERRORS_UL = "errors"
 LIT_MAGIC_STRING_LOG10E_U = "LOG10E"
 LIT_MAGIC_STRING_MODULE_UL = "Module"
 LIT_MAGIC_STRING_NUMBER_UL = "Number"
@@ -362,6 +364,7 @@ LIT_MAGIC_STRING_LOCALE_COMPARE_UL = "localeCompare"
 LIT_MAGIC_STRING_SET_UTC_MINUTES_UL = "setUTCMinutes"
 LIT_MAGIC_STRING_SET_UTC_SECONDS_UL = "setUTCSeconds"
 LIT_MAGIC_STRING_TO_EXPONENTIAL_UL = "toExponential"
+LIT_MAGIC_STRING_AGGREGATE_ERROR_UL = "AggregateError"
 LIT_MAGIC_STRING_ARRAY_ITERATOR_UL = "Array Iterator"
 LIT_MAGIC_STRING_ASYNC_GENERATOR_UL = "AsyncGenerator"
 LIT_MAGIC_STRING_BIGUINT64_ARRAY_UL = "BigUint64Array"
