Rework module linking
The module linking process from jerry_parse is moved out into
a new jerry_module_link function, and jerry_parse is limited to
create unlinked modules.

JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/targets/nuttx-stm32f4/Makefile
+++ b/targets/nuttx-stm32f4/Makefile
@@ -37,7 +37,7 @@ LIBS = libjerry-core.a libjerry-ext.a libjerry-math.a
 
 APPNAME = jerry
 ASRCS = setjmp.S
-CSRCS = jerry_port.c
+CSRCS = jerry_port.c jerry_module.c
 MAINSRC = jerry_main.c
 
 .PHONY: copylibs
