Support shared user data for scripts
The same data is returned for the script and all of its functions,
including those which are created by an eval call.

JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/tests/unit-core/CMakeLists.txt
+++ b/tests/unit-core/CMakeLists.txt
@@ -77,6 +77,7 @@ set(SOURCE_UNIT_TEST_MAIN_MODULES
   test-regexp.c
   test-regression-3588.c
   test-resource-name.c
+  test-script-user-value.c
   test-snapshot.c
   test-special-proxy.c
   test-string-to-number.c
