--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -137,6 +137,7 @@ LIT_MAGIC_STRING_THROW = "throw"
 LIT_MAGIC_STRING_TRUNC = "trunc"
 LIT_MAGIC_STRING_VALUE = "value"
 LIT_MAGIC_STRING_RESOURCE_EVAL = "<eval>"
+LIT_MAGIC_STRING_AS_INT_N = "asIntN"
 LIT_MAGIC_STRING_BIGINT_UL = "BigInt"
 LIT_MAGIC_STRING_ERRORS_UL = "errors"
 LIT_MAGIC_STRING_LOG10E_U = "LOG10E"
@@ -191,6 +192,7 @@ LIT_MAGIC_STRING_PROMISE_UL = "Promise"
 LIT_MAGIC_STRING_REFLECT_UL = "Reflect"
 LIT_MAGIC_STRING_SYMBOL_DOT_UL = "Symbol."
 LIT_MAGIC_STRING_SQRT1_2_U = "SQRT1_2"
+LIT_MAGIC_STRING_AS_U_INT_N = "asUintN"
 LIT_MAGIC_STRING_BOOLEAN = "boolean"
 LIT_MAGIC_STRING_COMPILE = "compile"
 LIT_MAGIC_STRING_DEFAULT = "default"
