--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -33,6 +33,7 @@ LIT_MAGIC_STRING_PI_U = "PI"
 LIT_MAGIC_STRING_AT = "at"
 LIT_MAGIC_STRING_IS = "is"
 LIT_MAGIC_STRING_OF = "of"
+LIT_MAGIC_STRING_ATOMICS_OR = "or"
 LIT_MAGIC_STRING_LN2_U = "LN2"
 LIT_MAGIC_STRING_MAP_UL = "Map"
 LIT_MAGIC_STRING_NAN = "NaN"
@@ -40,6 +41,8 @@ LIT_MAGIC_STRING_SET_UL = "Set"
 LIT_MAGIC_STRING_UTC_U = "UTC"
 LIT_MAGIC_STRING_ABS = "abs"
 LIT_MAGIC_STRING_ADD = "add"
+LIT_MAGIC_STRING_ATOMICS_AND = "and"
+LIT_MAGIC_STRING_ATOMICS_SUB = "sub"
 LIT_MAGIC_STRING_ALL = "all"
 LIT_MAGIC_STRING_ANY = "any"
 LIT_MAGIC_STRING_COS = "cos"
@@ -58,10 +61,12 @@ LIT_MAGIC_STRING_RAW = "raw"
 LIT_MAGIC_STRING_SET = "set"
 LIT_MAGIC_STRING_SIN = "sin"
 LIT_MAGIC_STRING_TAN = "tan"
+LIT_MAGIC_STRING_ATOMICS_XOR = "xor"
 LIT_MAGIC_STRING_EMPTY_NON_CAPTURE_GROUP = "(?:)"
 LIT_MAGIC_STRING_DATE_UL = "Date"
 LIT_MAGIC_STRING_JSON_U = "JSON"
 LIT_MAGIC_STRING_LN10_U = "LN10"
+LIT_MAGIC_STRING_ATOMICS_LOAD = "load"
 LIT_MAGIC_STRING_MATH_UL = "Math"
 LIT_MAGIC_STRING_NULL_UL = "Null"
 LIT_MAGIC_STRING_ACOS = "acos"
@@ -100,6 +105,7 @@ LIT_MAGIC_STRING_TEST = "test"
 LIT_MAGIC_STRING_THEN = "then"
 LIT_MAGIC_STRING_TRIM = "trim"
 LIT_MAGIC_STRING_TRUE = "true"
+LIT_MAGIC_STRING_ATOMICS_WAIT = "wait"
 LIT_MAGIC_STRING_ARRAY_UL = "Array"
 LIT_MAGIC_STRING_ERROR_UL = "Error"
 LIT_MAGIC_STRING_PROXY_UL = "Proxy"
@@ -133,6 +139,7 @@ LIT_MAGIC_STRING_SHIFT = "shift"
 LIT_MAGIC_STRING_SLICE = "slice"
 LIT_MAGIC_STRING_SPLIT = "split"
 LIT_MAGIC_STRING_STACK = "stack"
+LIT_MAGIC_STRING_ATOMICS_STORE = "store"
 LIT_MAGIC_STRING_THROW = "throw"
 LIT_MAGIC_STRING_TRUNC = "trunc"
 LIT_MAGIC_STRING_VALUE = "value"
@@ -165,6 +172,7 @@ LIT_MAGIC_STRING_GLOBAL = "global"
 LIT_MAGIC_STRING_IS_VIEW_UL = "isView"
 LIT_MAGIC_STRING_KEY_FOR = "keyFor"
 LIT_MAGIC_STRING_LENGTH = "length"
+LIT_MAGIC_STRING_ATOMICS_NOTIFY = "notify"
 LIT_MAGIC_STRING_NUMBER = "number"
 LIT_MAGIC_STRING_OBJECT = "object"
 LIT_MAGIC_STRING_PAD_END = "padEnd"
@@ -185,6 +193,7 @@ LIT_MAGIC_STRING_SUBSTR = "substr"
 LIT_MAGIC_STRING_ENTRIES = "entries"
 LIT_MAGIC_STRING_TO_JSON_UL = "toJSON"
 LIT_MAGIC_STRING_VALUES = "values"
+LIT_MAGIC_STRING_ATOMICS_U = "Atomics"
 LIT_MAGIC_STRING_BOOLEAN_UL = "Boolean"
 LIT_MAGIC_STRING_FINALLY = "finally"
 LIT_MAGIC_STRING_PROMISE_UL = "Promise"
@@ -230,6 +239,7 @@ LIT_MAGIC_STRING_INFINITY_UL = "Infinity"
 LIT_MAGIC_STRING_MATCH_ALL = "matchAll"
 LIT_MAGIC_STRING_URI_ERROR_UL = "URIError"
 LIT_MAGIC_STRING_ENDS_WITH = "endsWith"
+LIT_MAGIC_STRING_ATOMICS_EXCHANGE = "exchange"
 LIT_MAGIC_STRING_FUNCTION = "function"
 LIT_MAGIC_STRING_GET_HOURS_UL = "getHours"
 LIT_MAGIC_STRING_GET_INT16_UL = "getInt16"
@@ -276,6 +286,7 @@ LIT_MAGIC_STRING_GENERATOR_UL = "Generator"
 LIT_MAGIC_STRING_GET_UTC_DAY_UL = "getUTCDay"
 LIT_MAGIC_STRING_GET_UINT16_UL = "getUint16"
 LIT_MAGIC_STRING_GET_UINT32_UL = "getUint32"
+LIT_MAGIC_STRING_ATOMICS_ISLOCKFREE = "isLockFree"
 LIT_MAGIC_STRING_LASTINDEX_UL = "lastIndex"
 LIT_MAGIC_STRING_MULTILINE = "multiline"
 LIT_MAGIC_STRING_PROTOTYPE = "prototype"
@@ -379,6 +390,7 @@ LIT_MAGIC_STRING_SET_PROTOTYPE_OF_UL = "setPrototypeOf"
 LIT_MAGIC_STRING_SET_UTC_FULL_YEAR_UL = "setUTCFullYear"
 LIT_MAGIC_STRING_TO_LOCALE_STRING_UL = "toLocaleString"
 LIT_MAGIC_STRING_STRING_ITERATOR_UL = "String Iterator"
+LIT_MAGIC_STRING_ATOMICS_COMPAREEXCHANGE = "compareExchange"
 LIT_MAGIC_STRING_GET_MILLISECONDS_UL = "getMilliseconds"
 LIT_MAGIC_STRING_SET_MILLISECONDS_UL = "setMilliseconds"
 LIT_MAGIC_STRING_DEFINE_PROPERTIES_UL = "defineProperties"
