Disable IRC notification action to have a green master
IRC notification GitHub action returns an error at the moment
and makes the master red (even if all builds passed).

Disable this action till we fix the notification.

JerryScript-DCO-1.0-Signed-off-by: Peter Gal pgal.usz@partner.samsung.com

--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -293,7 +293,7 @@ jobs:
 
   Notification:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.repository == 'jerryscript-project/jerryscript'
+    if: false && github.event_name == 'push' && github.repository == 'jerryscript-project/jerryscript'
     steps:
       - uses: rectalogic/notify-irc@v1
         with:
