Implement import.meta object
JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/tests/unit-core/CMakeLists.txt
+++ b/tests/unit-core/CMakeLists.txt
@@ -59,6 +59,7 @@ set(SOURCE_UNIT_TEST_MAIN_MODULES
   test-literal-storage.c
   test-mem-stats.c
   test-module-dynamic.c
+  test-module-import-meta.c
   test-module.c
   test-native-callback-nested.c
   test-native-instanceof.c
