Implement source info retrieval API function
JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/tests/unit-core/CMakeLists.txt
+++ b/tests/unit-core/CMakeLists.txt
@@ -81,6 +81,7 @@ set(SOURCE_UNIT_TEST_MAIN_MODULES
   test-resource-name.c
   test-script-user-value.c
   test-snapshot.c
+  test-source-info.c
   test-special-proxy.c
   test-string-to-number.c
   test-stringbuilder.c
