Implement eval check for ECMAScript code
JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/tests/unit-core/CMakeLists.txt
+++ b/tests/unit-core/CMakeLists.txt
@@ -53,6 +53,7 @@ set(SOURCE_UNIT_TEST_MAIN_MODULES
   test-get-own-property.c
   test-has-property.c
   test-internal-properties.c
+  test-is-eval-code.c
   test-jmem.c
   test-json.c
   test-lit-char-helpers.c
