--- a/jerry-core/parser/js/parser-error-messages.ini
+++ b/jerry-core/parser/js/parser-error-messages.ini
@@ -137,4 +137,8 @@ PARSER_ERR_VARIABLE_REDECLARED = "Local variable is redeclared"
 PARSER_ERR_WHILE_EXPECTED = "While expected for do-while loop"
 PARSER_ERR_WITH_NOT_ALLOWED = "With statement not allowed in strict mode"
 PARSER_ERR_YIELD_NOT_ALLOWED = "Yield expression is not allowed here"
-PARSER_ERR_NO_ERROR = "No error"
+PARSER_ERR_DUPLICATED_PRIVATE_FIELD = "Private field has already been declared"
+PARSER_ERR_UNDECLARED_PRIVATE_FIELD = "Private field must be declared in an enclosing class"
+PARSER_ERR_DELETE_PRIVATE_FIELD = "Private fields can not be deleted"
+PARSER_ERR_UNEXPECTED_PRIVATE_FIELD = "Unexpected private field"
+PARSER_ERR_CLASS_PRIVATE_CONSTRUCTOR = "Class constructor may not be a private method"
